# mini-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
.github/workflows/: cmake-single-platform.yml
lib/debugger/: CMakeLists.txt
lib/debugger/include/: breakpoint.hpp  debugger.hpp
lib/debugger/src/: breakpoint.cpp  debugger.cpp
lib/debugger/test/: debugger_test.cpp
lib/sample/: CMakeLists.txt  main.c  readme.md
src/: main.cpp
